infra/deploy-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: pablitorub/ad-node:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: node-persistent-storage
              mountPath: /app/uploads/images
      volumes:
        - name: node-persistent-storage
          persistentVolumeClaim:
            claimName: node-pvc
