infra/ingress-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cm-dashboard-1.rubini.com.ar
      http:
        paths:
          - backend:
              service:
                name: mongo-service
                port:
                  number: 27017
            path: /
            pathType: Prefix
