infra/ingress-node.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: be.rubini.com.ar
      http:
        paths:
          - backend:
              service:
                name: node-service
                port:
                  number: 5001
            path: /
            pathType: Prefix
